# touml

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
assets/: index.html  touml.js  touml_bg.wasm
crates/touml/: Cargo.toml
crates/touml-cli/: Cargo.toml
crates/touml-cli/src/: main.rs  utils.rs
crates/touml/src/: _ast.rs  errors.rs  lib.rs  mermaid.rs  python.rs
python/touml/: __main__.py
src/: _ast.rs  compiler.rs  errors.rs  lib.rs  main.rs  mermaid.rs  prelude.rs  python.rs
src/generators/: mermaid.rs  mod.rs
src/parsers/: mod.rs  python.rs
tests/inputs/python/test_pkg/: __main__.py
tests/inputs/python/test_pkg/core/: utils.py
tests/inputs/python/test_pkg/models/: __init__.py  base.py  enums.py  impls.py
