[package]
name = "touml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.9.0"
rustpython-parser = {git = "https://github.com/RustPython/Parser.git"}
thiserror = "1.0.58"

[lib]
name = "touml"
path = "src/lib.rs"
