[package]
name = "touml-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "touml-cli"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.13", features = ["derive"] }
crossterm = "0.28.1"
tempfile = "3.12.0"
touml = { path = "../touml"}
