[package]
name = "touml-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "touml"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.13", features = ["derive"] }
glob = "0.3.1"
rayon = "1.10.0"
touml = { path = "../touml" }
walkdir = "2.5.0"
