[package]
name = "touml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
rayon = "1.9.0"
rustpython-parser = {git = "https://github.com/RustPython/Parser.git"}
tempfile = "3.12.0"
thiserror = "1.0.58"
wasm-bindgen = "0.2.92"

[lib]
name = "touml"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
